Fixed #295 added more places where a isBanned() check is performed. (for example when creating or updating a wikipage). Also provided more error messages that you are in fact banned in the client.